lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -368,13 +368,11 @@ Resources:
       - IpProtocol: tcp
         FromPort: 8080
         ToPort: 8080
-        CidrIp: 
-          Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
+        CidrIp: !Ref FirstTrustedInternetCiderParam
       - IpProtocol: tcp
         FromPort: 8081
         ToPort: 8081
-        CidrIp: 
-          Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcCidrBlock"
+        CidrIp: !Ref FirstTrustedInternetCiderParam
       Tags:
         - Key: Name
           Value: PubVpcWebServerElbv2SG
