lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
@@ -63,6 +63,28 @@ Resources:
       GroupId: !Ref StaticWebRootFsxFilesystemSecurityGroup
       IpProtocol: tcp
 
+  StaticWebRootFsxFilesystemNfs2049bTcpIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties: 
+      CidrIp:
+        Fn::ImportValue: !Sub "${VpcStackName}-PublicVpcCidrBlock"
+      Description: "Allow port 2049/tcp (NFS)"
+      FromPort: 2049
+      ToPort: 2049
+      GroupId: !Ref StaticWebRootFsxFilesystemSecurityGroup
+      IpProtocol: tcp
+
+  StaticWebRootFsxFilesystemNfs111bTcpIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties: 
+      CidrIp:
+        Fn::ImportValue: !Sub "${VpcStackName}-PublicVpcCidrBlock"
+      Description: "Allow port 111/tcp (NFS RPC)"
+      FromPort: 111
+      ToPort: 111
+      GroupId: !Ref StaticWebRootFsxFilesystemSecurityGroup
+      IpProtocol: tcp
+
   StaticWebRootFsxFilesystemNfs2049UdpIngress:
     Type: AWS::EC2::SecurityGroupIngress
     Properties: 
@@ -79,6 +101,28 @@ Resources:
     Properties: 
       CidrIp:
         Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcCidrBlock"
+      Description: "Allow port 111/udp (NFS RPC)"
+      FromPort: 111
+      ToPort: 111
+      GroupId: !Ref StaticWebRootFsxFilesystemSecurityGroup
+      IpProtocol: udp
+
+  StaticWebRootFsxFilesystemNfs2049bUdpIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties: 
+      CidrIp:
+        Fn::ImportValue: !Sub "${VpcStackName}-PublicVpcCidrBlock"
+      Description: "Allow port 2049/udp (NFS)"
+      FromPort: 2049
+      ToPort: 2049
+      GroupId: !Ref StaticWebRootFsxFilesystemSecurityGroup
+      IpProtocol: udp
+
+  StaticWebRootFsxFilesystemNfs111bUdpIngress:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties: 
+      CidrIp:
+        Fn::ImportValue: !Sub "${VpcStackName}-PublicVpcCidrBlock"
       Description: "Allow port 111/udp (NFS RPC)"
       FromPort: 111
       ToPort: 111
@@ -115,10 +159,17 @@ Resources:
             - Clients: 
                 Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcCidrBlock"
               Options: 
-                - rw
-                - crossmnt
-                - sync
-                - root_squash
+              - rw
+              - crossmnt
+              - sync
+              - root_squash
+            - Clients: 
+                Fn::ImportValue: !Sub "${VpcStackName}-PublicVpcCidrBlock"
+              Options: 
+              - rw
+              - crossmnt
+              - sync
+              - root_squash
           ReadOnly: false
           RecordSizeKiB: 16
         ThroughputCapacity: 64
