--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -448,6 +448,19 @@ Resources:
       Protocol: "HTTPS"
       SslPolicy: "ELBSecurityPolicy-2016-08"
 
+  PublicVpcWebServer80Elbv2Listener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties: 
+      DefaultActions: 
+      - Type: "fixed-response"
+        FixedResponseConfig: 
+          ContentType: "text/plain"
+          MessageBody: "Please use the secure port when using this service."
+          StatusCode: "200"
+      LoadBalancerArn: !Ref PublicVpcWwwDomainWebServerElbv2
+      Port: 80
+      Protocol: "HTTP"
+
   # WwwServerListenerRule:
   #   Type: AWS::ElasticLoadBalancingV2::ListenerRule
   #   Properties: 
