lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -483,6 +483,7 @@ Resources:
 
               mkdir /home/ec2-user/script
               chown ec2-user:ec2-user /home/ec2-user/script
+              chown ec2-user:ec2-user /data/deployments
 
               REQUIREMENTS_FILE=${RequirementsFile}
               SCRIPT_FILE=${ScriptFile}
