--- a/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4000_fsx_filesystem.yaml
@@ -119,7 +119,9 @@ Resources:
               - rw
               - crossmnt
               - sync
-              - root_squash
+              # - root_squash
+              - no_root_squash
+              - no_all_squash
           ReadOnly: false
           RecordSizeKiB: 16
         ThroughputCapacity: 64
