lab3: working on web server stack

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -396,6 +396,10 @@ Resources:
         FromPort: 8443
         ToPort: 8443
         CidrIp: !Ref FirstTrustedInternetCiderParam
+      - IpProtocol: tcp
+        FromPort: 80
+        ToPort: 80
+        CidrIp: !Ref FirstTrustedInternetCiderParam
       Tags:
         - Key: Name
           Value: PubVpcWebServerElbv2SG
