--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -471,15 +471,25 @@ Resources:
       Port: 80
       Protocol: "HTTP"
 
-  # WwwServerListenerRule:
-  #   Type: AWS::ElasticLoadBalancingV2::ListenerRule
-  #   Properties: 
-  #     Actions: 
-  #       - Action
-  #     Conditions: 
-  #       - RuleCondition
-  #     ListenerArn: String
-  #     Priority: Integer
+  WwwServerListenerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties: 
+      Actions: 
+      - Order: 1
+        RedirectConfig: 
+          Host: "#{host}"
+          Path: "/"
+          Port: "443"
+          Protocol: "HTTPS"
+          StatusCode: "HTTP_301"
+        Type: "redirect"
+      Conditions: 
+      - Field: "path-pattern"
+        PathPatternConfig: 
+          Values: 
+          - "/*"
+      ListenerArn: !Ref PublicVpcWebServer80Elbv2Listener
+      Priority: 100
 
 
   WebServerPublicDnsRecord:
