--- a/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_web_server.yaml
@@ -438,12 +438,40 @@ Resources:
       Certificates:
       - CertificateArn: !Ref WebServerAcmCertificate
       DefaultActions: 
-      - Type: "forward"
-        TargetGroupArn: !Ref PublicVpcWebServer8080Elbv2TargetGroup
+      - Type: "redirect"
+        RedirectConfig: 
+          Host: 
+            Fn::Sub:
+            - "www.${DomainName}"
+            - DomainName: !Ref PublicDnsNameParam
+          Path: "/error.html"
+          Port: "443"
+          Protocol: "HTTPS"
+          Query: "message=Host+header+mismatched"
+          StatusCode: "HTTP_302"
       LoadBalancerArn: !Ref PublicVpcWwwDomainWebServerElbv2
       Port: 443
       Protocol: "HTTPS"
       SslPolicy: "ELBSecurityPolicy-2016-08"
+
+  PublicServerHostMatchListenerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties: 
+      Actions: 
+      - Order: 1
+        ForwardConfig:
+          TargetGroups: 
+          - TargetGroupArn: !Ref PublicVpcWebServer8080Elbv2TargetGroup
+        Type: "forward"
+      Conditions: 
+      - Field: "host-header"
+        HostHeaderConfig: 
+          Values: 
+          - Fn::Sub:
+            - "www.${DomainName}"
+            - DomainName: !Ref PublicDnsNameParam
+      ListenerArn: !Ref PublicVpcWebServer8081Elbv2Listener
+      Priority: 100
 
   PublicVpcWebServer8081Elbv2Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
