--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "untar",
         "untarred",
         "usermod",
+        "userpool",
         "WORKDIR",
         "zcat",
         "zfill",
