lab3: working on cognito user pool for employees

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
@@ -44,6 +44,7 @@ Resources:
       - implicit
       AllowedOAuthFlowsUserPoolClient: True
       AllowedOAuthScopes: 
+      - aws.cognito.signin.user.admin
       - email
       - openid
       - profile
