--- a/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
@@ -41,8 +41,8 @@ Resources:
     Type: AWS::Cognito::UserPoolClient
     Properties: 
       AllowedOAuthFlows: 
-      - implicit
-      AllowedOAuthFlowsUserPoolClient: True
+      - code
+      AllowedOAuthFlowsUserPoolClient: true
       AllowedOAuthScopes: 
       - aws.cognito.signin.user.admin
       - email
@@ -50,10 +50,15 @@ Resources:
       - profile
       CallbackURLs: 
       - Fn::Sub:
-        - "https://internal.${DomainName}/auth-callback"
+        - "https://internal.${DomainName}/callback.html"
         - DomainName: !Ref PublicDnsNameParam
-      - "http://localhost"
-      - "http://localhost:9000"
+      - "http://localhost/callback.html"
+      - "http://localhost:9000/callback.html"
+      - Fn::Sub:
+        - "https://internal.${DomainName}/loggedout.html"
+        - DomainName: !Ref PublicDnsNameParam
+      - "http://localhost/loggedout.html"
+      - "http://localhost:9000/loggedout.html"
       ClientName: employee-cognito-client
       SupportedIdentityProviders: 
       - COGNITO
