lab3: working on cognito user pool for employees

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
@@ -60,6 +60,12 @@ Resources:
       - "http://localhost/loggedout.html"
       - "http://localhost:9000/loggedout.html"
       ClientName: employee-cognito-client
+      LogoutURLs:
+      - Fn::Sub:
+        - "https://internal.${DomainName}/loggedout.html"
+        - DomainName: !Ref PublicDnsNameParam
+      - "http://localhost/loggedout.html"
+      - "http://localhost:9000/loggedout.html"
       SupportedIdentityProviders: 
       - COGNITO
       UserPoolId: !Ref CognitoAuthorizerUserPool
