lab3: working on cognito user pool for employees

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
@@ -21,7 +21,7 @@ Resources:
       AdminCreateUserConfig: 
         AllowAdminCreateUserOnly: true
         InviteMessageTemplate: 
-          EmailMessage: "Verification code: {####} | Temporary Password: {####}"
+          EmailMessage: "Username: {username} | Verification code: {####} | Temporary Password: {####}"
           EmailSubject: "Employee Account Invitation"
         UnusedAccountValidityDays: 3
       MfaConfiguration: "OFF" # Note: for real organizations, this will probably be on
